In header: fixed white space issue and hover colour issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,11 @@ header {
 }
 
 .menucontainer {
-    font-size: 0px;
+    font-size: 0;
+}
+
+#nav {
+    margin-bottom: 0px;
 }
 
 #nav li {
@@ -63,7 +67,7 @@ header {
 .menuitem {
     height: 120px;
     text-align: center;
-    padding: 0;
+    padding: 0px;
 }
 
 .menuitem a {
@@ -81,4 +85,11 @@ header {
     text-transform: uppercase;
     font-size: 20px;
     letter-spacing: 3px;
+}
+
+/* -----------------------------------Hover */
+
+.hvr-fade:hover {
+    background-color: #4e3950;
+    height: 120px;
 }
